fixing white space on mobile

--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 div.brew,
 html {
+    width: 100%;
     overflow-x: hidden;
 }
 body {
     margin: 0;
 }
 div.brew {
+    position: relative;
     min-width: 320px;
     font-family: CiscoSans, Arial, sans-serif;
     color: #424445;
@@ -32,7 +34,6 @@ div.brew {
 }
 .brew h3 {
     font-size: 2.91vw;;
-    /* line-height: 2.2vw; */
     letter-spacing: 0.125vw;
     margin: 1% 0px 0.5%;
     text-align: center;
@@ -220,3 +221,9 @@ div.brew {
     transform: translateX(0%) translateY(-113%);
     -webkit-transform: translateX(0%) translateY(-113%);
 }
+
+@media only screen and (max-width: 768px) {
+    HTML, body {
+        width: 100%;
+        overflow-x: hidden;
+    }}
